--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-      - name: Install frontend dependencies
+      - name: Install frontend without devDependencies
         working-directory: client
-        run: npm ci
+        run: npm ci --omit=dev
       - name: Build frontend
         working-directory: client
         run: npm run build
       - name: Lint frontend
         working-directory: client
         run: npm run lint
-      - name: Install backend dependencies
+      - name: Install backend dependencies without devDependencies
         working-directory: server
-        run: npm ci
+        run: npm ci --omit=dev
