--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 
+      # Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
+
+      # Debug: Sprawdź czy package-lock.json istnieje
+      - name: Check frontend files
+        working-directory: client
+        run: ls -la
+
+      - name: Check backend files
+        working-directory: server
+        run: ls -la
       - name: Install frontend without devDependencies
         working-directory: client
         run: npm ci --omit=dev
+
+      # Build frontend
       - name: Build frontend
         working-directory: client
         run: npm run build
+
+      # Lint frontend
       - name: Lint frontend
         working-directory: client
         run: npm run lint
-      - name: Install backend dependencies without devDependencies
+
+      - name: Install backend without devDependencies
         working-directory: server
         run: npm ci --omit=dev
+
