--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -12,16 +12,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      with:
-      fetch-depth: 0  
+        with:
+        fetch-depth: 0  
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
 
-      - name: Install frontend
-        working-directory: client
-        run: npm ci 
+
+      - name: Install frontend without devDependencies
+  working-directory: client
+  run: npm ci --omit=dev
+
 
       - name: Build frontend
         working-directory: client
@@ -31,6 +33,6 @@ jobs:
         working-directory: client
         run: npm run lint
 
-      - name: Install backend dependencies
-        working-directory: server
-        run: npm ci
+      - name: Install backend without devDependencies
+       working-directory: server
+      run: npm ci --omit=dev
